# customloader

./: .gitignore  1.c  apager.c  buntzlinkerfile  customlinkerfile  elfloader.c  hellosymbols.txt  makefile  notes.txt  pager.h  stackutils.c  toload.c
mallocfilter/: CMakeLists.txt  makefile
mallocfilter/src/: makefile  mallocfilter2.c  mallocfreefilter.c  mallocfreefilter.h  mallocfreemain.c  malloctest.c  readme.md
testsuit/: b1.c  bigarrays.c  hello.c  hello.out  hello.symbols.out  hpager  instruments.c  instruments.h  makefile  seqarray.c  sigsegv.c  toload.c  xpager.c
